--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="main">
         <div class="mainContent">
             <div class="column try">
-                <div class="types">Hello World</div>
+                <div class="types">Hello World RR</div>
             </div>
         </div>
     </div>
